--- a/test/public/index.html
+++ b/test/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/MovieZoneRund.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/thebigscreenfav.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Movie Zone</title>
+    <title>The Big Screen</title>
     <link rel="stylesheet" href ="index.css">
   </head>
   <body>
